--- a/snippets/quick-shop-modal.liquid
+++ b/snippets/quick-shop-modal.liquid
@@ -4,20 +4,47 @@
 </modal-opener>
 <modal-dialog id="ProductModal-{{ product.id }}">
     <div class="p-[44px] w-[656px] h-[538px] flex gap-s7 bg-white relative" role="dialog">
-        <div class="flex-1 relative overflow-hidden carousel" data-curr="0">
+        <div class="flex-1 relative overflow-hidden carousel">
             {% for image in product.images %}
-                <img src="{{ image | image_url }}" class="w-full h-full object-cover absolute top-0 carousel-img" style="left:calc(100% * {{ forloop.index0 }});" data-index="{{ forloop.index0 }}" width="300" height="450" loading="lazy" />
+                <img src="{{ image | image_url }}" class="w-full h-full object-cover absolute top-0 transition-all carousel-img" style="left:calc(100% * {{ forloop.index0 }});" data-index="{{ forloop.index0 }}" width="300" height="450" loading="lazy" />
             {% endfor %}
-            <button class="absolute left-0 top-1/2 -transform-y-1/2 px-s1 py-s2 bg-black-50 carousel-control" data-action="prev"></button>
-            <button class="absolute right-0 top-1/2 -transform-y-1/2 px-s1 py-s2 bg-black-50 carousel-control" data-action="next"></button>
+            <button class="absolute left-0 top-1/2 -transform-y-1/2 px-s1 py-s2 bg-black-50 disabled:hidden carousel-control" data-action="prev">
+                {% render "24-left", class: "text-black-400" %}
+            </button>
+            <button class="absolute right-0 top-1/2 -transform-y-1/2 px-s1 py-s2 bg-black-50 disabled:hidden carousel-control" data-action="next">
+                {% render "24-right" class: "text-black-400" %}
+            </button>
         </div>
         <div class="w-[236px]">
             <p class="faux-p-lg text-black-900 mt-s7">{{ product.title }}</p>
-            <p class="text-black-900">{{ product.price | money }}</p>
-            <div class="w-full my-s7" style="background-color:#DDDDDD;"></div>
-            <p>Color</p>
-            <p>Size</p>
-            {%- assign product_form_id = 'quick-add-' | append: product.id -%}
+            <p class="faux-p-sm text-black-900 mt-s5">{{ product.price | money }}</p>
+            <div class="w-full h-[1px] mt-s7" style="background-color:#DDDDDD;"></div>
+            <div class="relative mt-s7">
+                <div class="flex gap-s1 pt-s5 pb-[2px]">
+                    {% for option in product.options_with_values %}
+                        {% if option.name == "Color" %}
+                            {% for optionValue in option.values %}
+                                <input type="radio" name="color" id="color-radio-{{ product.id }}-{{ forloop.index }}" class="color-selector sm" {% if forloop.first %}checked{% endif %}/>
+                                <p class="absolute top-0 left-0 faux-p-xs text-black-700">Color:<label class="form-control pl-s2" for="color-radio-{{ product.id }}-{{ forloop.index }}">{{ optionValue }}</label></p>
+                            {% endfor %}
+                        {% endif %}
+                    {% endfor %}
+                </div>
+            </div>
+            <div class="mt-s5">
+                <p class="faux-p-xs block">Size</p>
+                <div class="flex justify-start gap-s2 mt-s2">
+                    {% for option in product.options_with_values %}
+                        {% if option.name == "Size" %}
+                            {% for optionValue in option.values %}
+                                <input type="radio" name="size" id="size-radio-{{ forloop.index }}" class="absolute size-selector " {% if forloop.first %}checked{% endif %}/>
+                                <label class="form-control faux-p-sm py-s3 px-s4 border-1" for="size-radio-{{ forloop.index }}">{{ optionValue | slice: 0 }}</label>
+                            {% endfor %}
+                        {% endif %}
+                    {% endfor %}
+                </div>
+            </div>
+            {%- assign product_form_id = 'product-' | append: product.id -%}
             <product-form>
                 {%- form 'product', product, id: product_form_id, class: 'form', novalidate: 'novalidate', data-type: 'add-to-cart-form' -%}
                   <input
@@ -41,7 +68,7 @@
                   >
                     <span>
                       {%- if product.selected_or_first_available_variant.available -%}
-                        Add to Cart
+                        Add to Basket
                       {%- else -%}
                         Sold Out
                       {%- endif -%}
@@ -64,8 +91,10 @@
                   </button>
                 {%- endform -%}
               </product-form>
-            <button class="btn btn--sm w-full mt-s4">View Full Details</button>
+            <a href="{{ product.url }}" class="btn btn--sm w-full mt-s4">View Full Details</a>
         </div>
-        <button id="ModalClose-{{ product.id }}" class="w-s8 h-s8 flex justify-center items-center absolute top-s5 right-s5 border-black-200 border-1 rounded-full">x</button>
+        <button id="ModalClose-{{ product.id }}" class="w-s8 h-s8 flex justify-center items-center absolute top-s5 right-s5 border-black-200 border-1 rounded-full">
+            {% render "24-close", class: "text-blue-800" %}
+        </button>
     </div>
 </modal-dialog>
