--- a/sections/banner.liquid
+++ b/sections/banner.liquid
@@ -1,8 +1,8 @@
-<div class="py-s4 px-s6 lg:px-[36px] flex justify-center md:justify-between items-center bg-primary-800 text-secondary-100 gap-s7">
+<div class="py-s4 px-s6 lg:px-[36px] flex justify-center md:justify-between items-center bg-primary-800 text-secondary-100 lg:gap-s7">
     <div class="flex-1 flex gap-s3 items-center text-secondary-600 to-md:hidden">
-        {% render '16-logo-facebook-simple' %}
-        {% render '16-logo-linkedin-simple' %}
-        {% render '16-logo-twitter' %}
+        <a href="{{ settings.social_facebook_link }}">{% render '16-logo-facebook-simple' %}</a>
+        <a href="{{ settings.social_linkedin_link }}">{% render '16-logo-linkedin-simple' %}</a>
+        <a href="{{ settings.social_twitter_link }}">{% render '16-logo-twitter' %}</a>
     </div>
     <div class="flex items-center">
         <div class="mr-s4 text-secondary-600">
@@ -14,9 +14,6 @@
         </div>
     </div>
     <div class="flex-1 flex justify-end items-center gap-s6 text-secondary-600 to-md:hidden">
-        <a class="to-lg:hidden">Help + FAQs</a>
-        <button class="faux-p-sm w-s3 h-s3">
-            {% render "12-close" %}
-        </button>
+        <a href="/pages/help-and-faqs" class="to-lg:hidden">Help + FAQs</a>
     </div>
 </div>
