--- a/sections/product-recommendations.liquid
+++ b/sections/product-recommendations.liquid
@@ -1,22 +1,39 @@
-<div class="color-{{ section.settings.color_scheme }} gradient">
-  <product-recommendations class="product-recommendations page-width section-{{ section.id }}-padding isolate" data-url="{{ routes.product_recommendations_url }}?section_id={{ section.id }}&product_id={{ product.id }}&limit={{ section.settings.products_to_show }}">
-    {% if recommendations.performed and recommendations.products_count > 0 %}
-      <h2 class="product-recommendations__heading {{ section.settings.heading_size }}">{{ section.settings.heading | escape }}</h2>
-      <ul class="grid product-grid grid--{{ section.settings.columns_desktop }}-col-desktop grid--{{ section.settings.columns_mobile }}-col-tablet-down" role="list">
-        {% for recommendation in recommendations.products %}
-          <li class="grid__item">
-            {% render 'card-product',
-              card_product: recommendation,
-              media_aspect_ratio: section.settings.image_ratio,
-              show_secondary_image: section.settings.show_secondary_image,
-              show_vendor: section.settings.show_vendor,
-              show_rating: section.settings.show_rating
-            %}
-          </li>
-        {% endfor %}
-      </ul>
-    {% endif %}
-  </product-recommendations>
+<div class="px-72">
+    <div class="py-s10 mx-auto max-w-content-lg">
+      <product-recommendations class="product-recommendations page-width section-{{ section.id }}-padding isolate" data-url="{{ routes.product_recommendations_url }}?section_id={{ section.id }}&product_id={{ product.id }}&limit={{ section.settings.products_to_show }}">
+        {% if recommendations.performed and recommendations.products_count > 0 %}
+          <h2 class="product-recommendations__heading">Related Products</h2>
+          <ul class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-s8 lg:gap-s6 mt-s9 md:mt-s8" role="list">
+            {% for recommendation in recommendations.products %}
+              <li class="grid__item">
+                <div class="flex-1">
+                    <div>
+                        {{ recommendation | image_url: width: 200 | image_tag: class: 'w-full aspect-[4/5] object-contain', loading: 'lazy' }}
+                    </div>
+                    <div class="mt-s6">
+                        <h3 class="faux-p-lg font-bold text-black-900">{{ recommendation.title }}</h3>
+                        <p class="mt-s5 text-black-400 uppercase">Brand/Collection</p>
+                        <p class="mt-s5">${{ recommendation.price | money_without_currency }}</p>
+                        <div class="h-s6 flex items-center gap-s1 mt-s3">
+                            <div class="product-variant--tile">
+                                <div class="dot bg-black-600"></div>
+                                <div class="disc"></div>
+                            </div>
+                            <div class="product-variant--tile">
+                                <div class="dot bg-black-600"></div>
+                                <div class="disc"></div>
+                            </div>
+                            <p class="faux-p-xs text-black-400">+5</p>
+                        </div>
+                    </div>
+                    {% render 'quick-shop-modal', product: recommendation %}
+                </div>
+              </li>
+            {% endfor %}
+          </ul>
+        {% endif %}
+      </product-recommendations>
+    </div>
 </div>
 
 {% javascript %}
